--- a/xsspoc.html
+++ b/xsspoc.html
@@ -1,1 +1,14 @@
-xsspoc
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>XSS PoC</title>
+</head>
+<body>
+    <h1>XSS Proof of Concept</h1>
+    <p>If you see an alert, the XSS payload worked.</p>
+    <script>
+        alert('XSS PoC: This is a demonstration alert!');
+    </script>
+</body>
+</html>
